<resources>
    <string name="app_name">Akio Scan</string>
    <string name="qr_scanner_icon">QR Scanner Icon</string>
    <string name="akio_scan">Akio Scan</string>
    <string name="scan_with_camera">Scan with Camera</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="result">Result</string>
    <string name="scan_or_select_an_image_to_see_details_here">Scan or select an image to see details here.</string>
</resources>